Fix: add-list-btn width, board-page overflow-x

--- a/src/styles/basics/_buttons.scss
+++ b/src/styles/basics/_buttons.scss
@@ -53,7 +53,8 @@
 }
 .open-add-list-btn {
     padding: 8px;
-    width: calc(100% - 16px);
+    // width: calc(100% - 16px);
+    width: 272px;
 }
 .save-card {
     padding: 8px;
