--- a/src/styles/views/_board-container.scss
+++ b/src/styles/views/_board-container.scss
@@ -1,4 +1,6 @@
 .board-container {
   padding: 8px;
   height: calc(100vh - 80px);
+  overflow-x: auto;
+
 }
